Update 'bhhgpva8g-nodejs' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-ded3d0d3f5.ka8f.p3.openshiftapps.com/rhtap/rhtap-qe-nodejs:0816642fc36a68d8c42b16517f4bc50dc4eaf169@sha256:b42620d72c1db5e79168ad1466b56e565c33294893f4ad4968e9708ac5b77f6f

--- a/components/bhhgpva8g-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/bhhgpva8g-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: bhhgpva8g-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-ded3d0d3f5.ka8f.p3.openshiftapps.com/rhtap/rhtap-qe-nodejs:0816642fc36a68d8c42b16517f4bc50dc4eaf169@sha256:b42620d72c1db5e79168ad1466b56e565c33294893f4ad4968e9708ac5b77f6f
+          name: container-image
